[workspace]
members = ["derive"]

[package]
name = "lookupvec"
version = "0.1.0"
edition = "2021"
rust_version = "1.63"

[features]
default = ["std"]
derive = ["dep:lookupvec_derive"]
serde = ["dep:serde"]
std = ["indexmap/std"]

[dependencies]
delegate = "^0.13"
indexmap = "^2.7"
lookupvec_derive = { path = "derive", optional = true}
serde = { version = "^1.0", optional = true }

[dev-dependencies]
lookupvec_derive = { path = "derive"}
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }