[workspace]
members = ["derive"]

[package]
name = "lookupvec"
description = "Container with Vec-like properties that also offers O(1) lookup of items based on an id field"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/agirardeau/agpublic"
readme = "README.md"
keywords = ["hashmap", "lookup", "vec"]
categories = ["data-structures"]

[features]
default = ["std"]
derive = ["dep:lookupvec_derive"]
serde = ["dep:serde"]
std = ["indexmap/std"]

[dependencies]
delegate = "^0.13"
indexmap = "^2.7"
lookupvec_derive = { path = "derive", version = "0.1", optional = true}
serde = { version = "^1.0", optional = true }
ref-cast = "^1.0"

[dev-dependencies]
lookupvec_derive = { path = "derive"}
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }