[workspace]
members = ["derive"]

[package]
name = "lookupvec"
description = "Container with Vec-like properties that also offers O(1) lookup of items based on an id field"
version = "0.2.0-alpha"
edition = "2021"
license = "MIT"
repository = "https://github.com/agirardeau/agpublic"
readme = "README.md"
keywords = ["hashmap", "lookup", "vec", "no_std"]
categories = ["data-structures"]

[features]
derive = ["dep:lookupvec_derive"]
serde = ["dep:serde"]

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
delegate = "0.13"
indexmap = { version = "2.10", default-features = false }
lookupvec_derive = { path = "derive", version = "0.1", optional = true}
serde = { version = "1.0", optional = true, default-features = false }
ref-cast = "1.0"

[dev-dependencies]
lookupvec_derive = { path = "derive"}
pretty_assertions = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }