[package]
name = "lookupvec_derive"
description = "Derive macro for LookupVec items"
version = "0.1.0"
edition = "2021"
rust_version = "1.63"
license = "MIT"
repository = "https://github.com/agirardeau/agpublic"
keywords = ["lookupvec"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"